--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,25 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  text-align: center;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.squares {
+  font-size: 3em;
+  background: lightblue;
+}
+
+.board {
+  background: pink;
+  width: 300px;
+  height: 300px;
+  margin: auto;
+  display: grid;
+  grid-template: repeat(3, 1fr) / repeat(3, 1fr);
 }
